--- a/package.json
+++ b/package.json
@@ -4,24 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "tsx watch src/server.ts"
+    "test": "vitest --dir src/services",
+    "start:dev": "tsx watch src/server.ts",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
+    "@types/bcryptjs": "2.4.5",
     "@types/node": "20.8.9",
+    "@types/supertest": "2.0.15",
     "eslint": "8.52.0",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.14.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6"
   },
   "dependencies": {
+    "@fastify/cookie": "9.1.0",
+    "@fastify/jwt": "7.2.2",
     "@prisma/client": "5.5.2",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.24.3",
+    "npm-run-all": "4.1.5",
     "prisma": "5.5.2",
     "zod": "3.22.4"
   }
